--- a/base-site/src/app/home/home.component.html
+++ b/base-site/src/app/home/home.component.html
@@ -5,6 +5,16 @@
 </div>
 <app-first></app-first>
 
+
+<!-- router link must be write in app-routing -->
+<button class="btn btn-outline-primary" [routerLink]="['/post-list']">
+    Post list
+</button>
+<button class="btn btn-outline-danger" [routerLink]="['/angular-home-page']">
+    Angular home page
+</button>
+<router-outlet></router-outlet>
+
 <!-- those class are bootstraps class for easy CSS -->
 <div class="container">
     <div class="row">
