--- a/base-site/src/app/post/post.component.html
+++ b/base-site/src/app/post/post.component.html
@@ -1,1 +1,6 @@
-<p>post works!</p>
+<li [ngClass]="{'list-group-item': true}">
+    <h1>{{post.title}}</h1>
+    <p>{{post.created_at}}</p>
+    <p>{{post.content}}</p>
+    <button>Love it {{post.loveIt}}</button>
+</li>
