--- a/base-site/src/app/post-list/post-list.component.html
+++ b/base-site/src/app/post-list/post-list.component.html
@@ -1,3 +1,3 @@
-<ul class="list-group" *ngFor="let post of posts | keyvalue">
-    <app-post></app-post>
+<ul class="list-group" *ngFor="let p of simplePostList">
+    <app-post [post]="p"></app-post>
 </ul>
