--- a/base-site/src/app/post/post.component.html
+++ b/base-site/src/app/post/post.component.html
@@ -6,5 +6,6 @@
     <p class="mb-1"> {{post.content}}</p>
     <!-- TODO make this button a toggle btn to increment loveIt -->
     <button class="btn btn-outline-info">Love it </button>
+    <button class="btn btn-outline-danger">Dislike it </button>
     <p> {{post.loveIt}} </p>
 </li>
