--- a/base-site/src/app/home/home.component.html
+++ b/base-site/src/app/home/home.component.html
@@ -24,10 +24,12 @@
             <!-- The async pipe subscribes to an Observable or Promise and returns the latest value it has emitted. -->
             <p>Last async update : {{lastUpdateAsync | async }}</p>
             <!-- need key value here to transforms Object (or Map) into an array of key value pairs -->
-            <ul class="list-group" *ngFor="let app of apparatus | keyvalue">
-                <app-apparatus apparatusName={{app.key}} apparatusStatus={{app.value}}></app-apparatus>
+            <ul class="list-group" *ngFor="let apparatus of apparatuses; let i = index">
+                <app-apparatus [apparatusName]="apparatus.name" [apparatusStatus]="apparatus.status" [index]="i">
+                </app-apparatus>
             </ul>
             <button class="btn btn-success" [disabled]="!isAuth" (click)="onTurnOn()">Turn all on</button>
+            <button class="btn btn-danger" [disabled]="!isAuth" (click)="onTurnOff()">Turn all oaff</button>
         </div>
     </div>
 </div>
