--- a/base-site/src/app/components/home/home.component.html
+++ b/base-site/src/app/components/home/home.component.html
@@ -13,6 +13,9 @@
                 <li routerLinkActive="active"><a routerLink="post-list">Post list</a></li>
                 <li routerLinkActive="active"><a routerLink="angular-home-page">Angular home page</a></li>
             </ul>
+            <div class="navbar-right">
+                <p>You have been logged in for {{seconds}} seconds!</p>
+            </div>
         </div>
     </div>
 </nav>
