--- a/base-site/src/app/components/home/home.component.html
+++ b/base-site/src/app/components/home/home.component.html
@@ -9,6 +9,7 @@
         <div class="navbar-collapse">
             <ul class="nav navbar-nav">
                 <li routerLinkActive="active"><a routerLink="auth">Authentication</a></li>
+                <li routerLinkActive="active"><a routerLink="users">Users</a></li>
                 <li routerLinkActive="active"><a routerLink="apparatus-list">Apparatus list</a></li>
                 <li routerLinkActive="active"><a routerLink="apparatus-edit">Apparatus edition</a></li>
                 <li routerLinkActive="active"><a routerLink="post-list">Post list</a></li>
