add route to new user

--- a/base-site/src/app/components/user-list/user-list.component.html
+++ b/base-site/src/app/components/user-list/user-list.component.html
@@ -8,4 +8,6 @@
             <span *ngFor="let hobby of user.hobbies">{{ hobby }} - </span>
         </p>
     </li>
+    <!-- need a / to nav to 4200/new-user and 4200/users/new-user -->
+    <a routerLink="/new-user">Nouvel utilisateur</a>
 </ul>
