--- a/base-site/src/app/components/new-user/new-user.component.html
+++ b/base-site/src/app/components/new-user/new-user.component.html
@@ -19,6 +19,6 @@
                 <option value="jus de mangue">Mango juice</option>
             </select>
         </div>
-        <button type="submit" class="btn btn-primary">Soumettre</button>
+        <button type="submit" class="btn btn-primary" [disabled]="userForm.invalid">Save</button>
     </form>
 </div>
