--- a/base-site/src/app/components/new-user/new-user.component.html
+++ b/base-site/src/app/components/new-user/new-user.component.html
@@ -15,8 +15,8 @@
         <div class="form-group">
             <label for="drinkPreference">What is your favorite drink ?</label>
             <select id="drinkPreference" class="form-control" formControlName="drinkPreference">
-                <option value="jus d\'orange">Orange juice</option>
-                <option value="jus de mangue">Mango juice</option>
+                <option value="orange juice">Orange juice</option>
+                <option value="orange juice">Mango juice</option>
             </select>
         </div>
         <div formArrayName="hobbies">
